# GRADIENT_BASED_OPTIMIZER

./: .gitignore  CMakeLists.txt  GRADIENT_BASED_OPTIMIZER  GRADIENT_BASED_OPTIMIZER.sln
GRADIENT_BASED_OPTIMIZER/: GRADIENT_BASED_OPTIMIZER.cpp  GRADIENT_BASED_OPTIMIZER.vcxproj  GRADIENT_BASED_OPTIMIZER.vcxproj.filters  results_airplane.txt  results_lenna.txt
GRADIENT_BASED_OPTIMIZER/src/: attacks.cpp  attacks.h  block_metrics.cpp  block_metrics.h  config.h  gbo.cpp  gbo.h  image_metrics.cpp  image_metrics.h  image_processing_custom.cpp  image_processing_custom.h  launch.cpp  launch.h  population.cpp  population.h  random_utils.cpp  random_utils.h
GRADIENT_BASED_OPTIMIZER/src/jpeg/: compression.cpp  compression.h  quantization_tables.h
include/: config.h  embending_and_extracting.h  patterns.h  population.h  process_image.h  random_utils.h  smart_block.h  types.h
src/: embending_and_extracting.cpp  gbo.cpp  main.cpp  population.cpp  process_image.cpp  random_utils.cpp  rules_for_types.cpp  smart_block.cpp
